Fix broken appearance on mobile devices

--- a/src/Buttons/Buttons.css
+++ b/src/Buttons/Buttons.css
@@ -43,9 +43,3 @@
 .single-button:active {
   transform: translateY(3px);
 }
-
-@media screen and (min-width: 768px) {
-  .single-button {
-    height: 90px;
-  }
-}
